# Rust-Auth

./: .env.example  Cargo.toml  diesel.toml
migrations/2024-11-18-105137_create_users/: up.sql
src/: main.rs  schema.rs
src/api/: auth.rs  healthcheck.rs
src/config/: db.rs
src/model/: user.rs
src/models/: user.rs
src/routes/: auth.rs  healthcheck.rs  mod.rs  user.rs
src/types/: auth.rs  user.rs
