[package]
name = "rust-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bcrypt = "0.15.1"
chrono = "0.4.38"
diesel = { version = "2.2.4", features = ["postgres", "r2d2"]  }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
validator = { version = "0.19.0", features = ["derive"] }
